syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

message DeleteCaseRequest {
	int64 CaseId = 1;
}
